  `CPPFLAGS` can be passed during configure (e.g. via `LIBBFD_EXTRA_LIBS`) to
  ensure that these libraries are detected correctly.
- Score-P's installed libraries can be built either shared or static,
  but not the combination of both in one installation. The default
  changed to shared. For a pure static build, use `--enable-static
  --disable-shared`.

Bugfixes:

- Prevent the OMPT adapter from aborting when nested undeferred
  OpenMP tasks report task underflows.
- Enabling the CUDA / HIP adapter together with the OMPT adapter will no
  longer cause a segmentation fault with LLVM 16.0 and newer when OpenMP
  offloading flags are used.
- Ensure that usage of the HIP API from within Score-P does not leave
  lingering last error values.
- Fix memory corruption in cases where the HIP communicator was not
  initialized before unification.
- Delayed exit events from the OMPT adapter won't cause aborts if
  there were no corresponding enter events, e.g., due to
  SCOREP_RECORDING_OFF.
- Cray's OMPT implementation reuses data that is supposed to be
  parallel-region local. Handle this gracefully.
- Fix a race condition in BFD-based addr2line lookup.
- Fix a crash with NVTX when trying to name a stream which is unknown
  to the CUDA adapter.
- Fix a crash with NVTX when NULL is passed as the context when trying
  to name a CUDA context.
- Functions with the prefix "nvtx" are now filtered from automatic
  compiler instrumentation, as they are known to cause measurement
  failures when being combined with the CUDA adapter.
- Reduction of memory consumption when profiling is enabled and OPARI2
  or OMPT record tasks. Previously, the memory consumption would
  increase linearly for each created task, causing the measurement to
  abort when too many were scheduled.
- Properly quote macro definitions provided on the compiler command line
  during instrumentation.
- Prevent `configure` from aborting on `--with-lib<library>-include`