@@ -24,8 +24,6 @@ Common options are:
   --disable-preprocessing
                   Tells scorep to skip all preprocessing related steps,
                   the input files are already preprocessed.
-  --static        Enforce static linking of the Score-P libraries.
-  --dynamic       Enforce dynamic linking of the Score-P libraries.
   --no-as-needed  Adds a GNU ld linker flag to fix undefined references
                   when using shared Score-P libraries. This happens on
                   systems using --as-needed as linker default. It will
