@@ -13,7 +13,7 @@
  * Copyright (c) 2009-2013,
  * University of Oregon, Eugene, USA
  *
- * Copyright (c) 2009-2013, 2015, 2019-2022,
+ * Copyright (c) 2009-2013, 2015, 2019-2022, 2024,
  * Forschungszentrum Juelich GmbH, Germany
  *
  * Copyright (c) 2009-2014,
@@ -408,15 +408,6 @@ SCOREP_Instrumenter::prepare_config_tool_calls( const std::string& input_file )
 
     mode += SCOREP_Instrumenter_Selector::getAllConfigToolFlags( m_command_line );
     mode += SCOREP_Instrumenter_Adapter::getAllConfigToolFlags( m_command_line, input_file );
-
-    if ( m_command_line.enforceStaticLinking() )
-    {
-        mode += " --static";
-    }
-    else if ( m_command_line.enforceDynamicLinking() )
-    {
-        mode += " --dynamic";
-    }
 
 #if SCOREP_BACKEND_COMPILER_MIC && ( HAVE( PLATFORM_MIC ) || HAVE( MIC_SUPPORT ) )
     if ( m_command_line.isMmicSet() )
